Fix checkbox visual when using high contrast
Related issue:
https://github.com/uBlockOrigin/uBlock-issues/issues/3385

--- a/src/css/themes/default.css
+++ b/src/css/themes/default.css
@@ -460,6 +460,12 @@
     --popup-ruleset-tool-shadow: transparent;
 }
 
+@media (prefers-contrast: more) {
+    :root {
+        --checkbox-checked-ink: var(--ink-1);
+    }
+}
+
 /*
  * Rule colors
  * */
